# crepe-vamp-plugin

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: crepe-manual.md
resource/: About.txt  create-tflite-models.py  crepe-tiny.tflite  crepe.cat  ircamcrepe.cat
source/: cvp.cpp  cvp.h  cvp_model.h
test/: crepe.ptldoc
